--- a/Film.Infrastructure/Film.Infrastructure.csproj
+++ b/Film.Infrastructure/Film.Infrastructure.csproj
@@ -17,6 +17,10 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+      <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+      <PackageReference Include="sib_api_v3_sdk" Version="3.3.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
     </ItemGroup>
 
