--- a/Film.Api/Film.Api.csproj
+++ b/Film.Api/Film.Api.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Film.Infrastructure\Film.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\profile-images\" />
+  </ItemGroup>
+
 </Project>
